Reconhecimento por voz Testes de fala continua

--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
                            <button class="btn btn-success btn-lg pull-right" id="btn_gravar_audio">Gravar Audio</button>
                         </div>
 
-                        <div class="col-md-12">
-                
-                        </div>
+                        <div class="col-md-12"></div>
                      </div>
                      <!-- /.row final linha -->
                   </div>
